--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -11,26 +11,23 @@ author_profile: true
 
 {% include base_path %}
 
-<!-- New style rendering if publication categories are defined -->
-{% if site.publication_category %}
-  {% for category in site.publication_category  %}
-    {% assign title_shown = false %}
-    {% for post in site.publications reversed %}
-      {% if post.category != category[0] %}
-        {% continue %}
-      {% endif %}
-      {% unless title_shown %}
-        <h2>{{ category[1].title }}</h2><hr />
-        {% assign title_shown = true %}
-      {% endunless %}
-      {% include archive-single.html %}
-    {% endfor %}
-  {% endfor %}
-{% else %}
-  {% for post in site.publications reversed %}
-    {% include archive-single.html %}
-  {% endfor %}
-{% endif %}
+<!-- List publications by year -->
+{% assign current_year = "" %}
+{% for post in site.publications reversed %}
+  {% assign post_year = post.date | default: "1900-01-01" | date: "%Y" %}
+  {% if post_year != current_year %}
+    {% unless current_year == "" %}
+      </div>
+    {% endunless %}
+    <h2>{{ post_year }}</h2><hr />
+    <div class="publications-year">
+    {% assign current_year = post_year %}
+  {% endif %}
+  {% include archive-single.html %}
+{% endfor %}
+{% unless current_year == "" %}
+  </div>
+{% endunless %}
 
 
 
